--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -2,7 +2,13 @@ class Main
 {
    public static void main(String args[])
    {  
-      System.out.println("Alo mundo");
+      Pessoa p1 = new Pessoa();
+      p1.setNome("Ana");
+      Pessoa p2 = new Pessoa();
+      p2.setNome("João");
+      System.out.println("Nome1:"+p1.getNome());
+      System.out.println(p2.getNome());
+      
    }
 }
       
